# s2

./: .gitignore  CMakeLists.txt  Powershell-GUI.ps1  README.md  build.sh
cmdline/: Main.cpp
csharp/: Spooky2.sln
csharp/BuildPresets/: BuildPresets.csproj  Program.cs
csharp/ExtractDatabase/: ExtractDatabase.csproj  Program.cs
csharp/GeneratorLib/: BioFeedback.cs  Channel.cs  Client.cs  Files.cs  Harmonics.cs  Heap.cs  Pages.cs  PreventSleep.cs  Program.cs  ProgramStep.cs  Provider.cs  Pulse.cs  ReverseLookup.cs  Runner.cs  Scheduler.cs  Server.cs  SignalGenerator.cs  Simulator.cs  StreamData.cs  Waveform.cs
csharp/GeneratorTests/: FeedbackTests.cs  GeneratorTests.csproj  HeapTests.cs  ProgramParserTests.cs
csharp/S2Forms/: GeneratorControl.Designer.cs  GeneratorControl.cs  GeneratorControl2.Designer.cs  GeneratorControl2.cs  MainWindow.Designer.cs  MainWindow.cs  MainWindow.resx  ManualGeneratorControl.Designer.cs  ManualGeneratorControl.cs  Program.cs  ProgramControl.Designer.cs  ProgramControl.cs  S2Forms.csproj  SingleChannelControl.Designer.cs  SingleChannelControl.cs  packages.config
csharp/S2Forms/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
csharp/SimpleForms/: BiofeedbackSettingsForm.Designer.cs  BiofeedbackSettingsForm.cs  HeatmapControl.Designer.cs  HeatmapControl.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs  Resource1.Designer.cs  Resource1.resx  RunSettingsForm.Designer.cs  RunSettingsForm.cs  RunSettingsForm.resx  SimpleForms.csproj
csharp/SimpleForms/Pages/: BiofeedbackOptionsPage.Designer.cs  BiofeedbackOptionsPage.cs  BiofeedbackResultsPage.Designer.cs  BiofeedbackResultsPage.cs  MainPage.Designer.cs  MainPage.cs  ManualControlPage.Designer.cs  ManualControlPage.cs  RunBiofeedbackPage.Designer.cs  RunBiofeedbackPage.cs  RunOptionsPage.Designer.cs  RunOptionsPage.cs  RunProgramPage.Designer.cs  RunProgramPage.cs  SelectGeneratorPage.Designer.cs  SelectGeneratorPage.cs  SelectProgramPage.Designer.cs  SelectProgramPage.cs  SelectPulsePage.Designer.cs  SelectPulsePage.cs
csharp/SimpleForms/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
csharp/Spooky2Provider/: Resource1.Designer.cs  Resource1.resx  Spooky2Files.cs  Spooky2Generator.cs  Spooky2Program.cs  Spooky2Provider.cs  Spooky2Provider.csproj  Spooky2Pulse.cs
csharp/Spooky2Provider/Resources/: openspooky.db
s2/: Main.cpp
src/: Apple.cpp  Control.cpp  Database.cpp  Database.h  Device.h  Devices.cpp  Devices.h  FindCommand.cpp  Generator.cpp  Generator.h  Linux.cpp  Options.cpp  Options.h  Posix.cpp  Preset.cpp  Preset.h  Program.cpp  Program.h  ProgressMonitor.cpp  ProgressMonitor.h  Pulse.cpp  Pulse.h  PulseWin32.cpp  RunCommand.cpp  S2.h  Scan.cpp  SetCommand.cpp  Waveforms.cpp  Waveforms.h  Win32.cpp
tests/: Options.cpp  Tests.cpp  Tests.h
